--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    <div class="board"></div>
+    <div class="container">
+        <div class="board"></div>
+    </div>
 </body>
 </html>
