--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <div class="board"></div>
+        <button type="button" id="reset">Reset</button>
     </div>
 </body>
 </html>
